Update EN version of History items and fix spacing

--- a/src/components/history/index.css
+++ b/src/components/history/index.css
@@ -210,8 +210,8 @@
     @nest .is-large & {
       font-size: 4px;
       line-height: 1.6;
-      margin-top: 10px;
-      max-width: 80px;
+      margin-top: 5px;
+      max-width: 75px;
       opacity: 1;
       transition: opacity 0.2s 0.15s ease-in;
     }
